--- a/templates/project.html
+++ b/templates/project.html
@@ -4,7 +4,22 @@
 	<div class="span24 landing" style="background-image:url('/static/img/{{ section }}/{{ project }}/landing.png');">
 	</div>
 	<div class="span12">
-		<div class="info">&nbsp;</div>
+		<div class="project-description">
+			<div class="number">
+				<span class="section">{{ section[:2] }}</span>
+				<span class="slash">/</span>
+				<span class="project">{{ project[:2] }}</span>
+			</div>
+			<div class="project-name">{{ project[2:]|upper }}</div>
+			<div class="info">
+				{% for line in info %}
+					<div class="line">
+						<span class="key">{{ line[0] }}:</span>
+						<span class="value">{{ line[1] }}</span>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
 		<div class="x">&nbsp;</div>
 		<div class="arrow">&nbsp;</div>
 	</div>
