corrected the arrow

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -274,5 +274,9 @@ input:focus, select:focus, textarea:focus, a:focus {
 
 .arrow {
 	background-image: url("/static/img/arrow.png");
-	background-color: grey;
+	background-color: #94948b;
+	opacity: .35;
+	&:hover {
+		opacity: .45;
+	}
 }
