--- a/templates/project.html
+++ b/templates/project.html
@@ -20,7 +20,9 @@
 				{% endfor %}
 			</div>
 		</div>
-		<div class="x">&nbsp;</div>
-		<div class="arrow">&nbsp;</div>
+		<div class="x"></div>
+		<a href="" class="arrow">
+			<div class="arrow"></div>
+		</a>
 	</div>
 {% endblock %}
