--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -41,14 +41,14 @@
 				<a href="/{{ section_number }}{{ section_name }}" class="{{ 'selected' if section_number + section_name == section }}">
 					<span class="number">{{ section_number }}</span>
 					<span class="slash">/</span>
-					<span class="name">{{ section_name|upper }}</span>
+					<span class="name">{{ section_name|replace_dash|upper }}</span>
 				</a>
 				<ol>
 					{% for project_number, project_name in projects|sort if section_number + section_name == section %}
 						<li class="project">
 							<a href="/{{ section_number }}{{ section_name }}/{{ project_number }}{{ project_name }}" class="{{ 'selected' if project_number + project_name == project }}">
 								<span class="number">{{ project_number }}</span>
-								<span class="name">{{ project_name|upper }}</span>
+								<span class="name">{{ project_name|replace_dash|upper }}</span>
 							</a>
 						</li>
 					{% endfor %}
