--- a/templates/grid.html
+++ b/templates/grid.html
@@ -13,7 +13,7 @@
                         </span>
                         <span class="text">
                             <span class="section">{{ project['section_name']|upper }}</span>
-                            <span class="project">/ {{ project['project_name']|upper }}</span>
+                            <span class="project">/ {{ project['project_name']|upper|replace_dash }}</span>
                         </span>
                     </span>
                 </div>
