remove unessecary bootstrap files

--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -1,14 +1,14 @@
 @import "bootstrap/bootstrap.less";
 
+@import "bibiana/nav.less";
+@import "bibiana/section.less";
+@import "bibiana/project.less";
 
 @orange: #F58426;
 @grey: #808080;
 @pageHeight: 600px;
-@navMargin: 25px;
 @previewHeight: 200px;
-@menuPos: 176px;
 @serifFontFamily: Prata, Georgia, "Times New Roman", Times, serif;
-
 
 body {
     height: @pageHeight;
@@ -19,264 +19,8 @@ body {
 }
 
 
-.preview {
-    height: @previewHeight;
-    color: white;
-
-    span.orange {
-        display: none;
-    }
-    &:hover span.orange.hover {
-        display: block;
-        background: @orange;
-        height: @previewHeight;
-        opacity: .95;
-    }
-    .number {
-        line-height: 108px;
-        margin-left: 30px;
-        .section {
-            font-size: 58px;
-            font-family: @serifFontFamily;
-        }
-        .slash {
-            font-family: @serifFontFamily;
-            font-size: 70px;
-            vertical-align: -1px;
-            margin-left: 3px;
-        }
-        .project {
-            font-size: 70px;
-            font-style: italic;
-            font-weight: 200;
-        }
-    }
-
-    span.text {
-        margin-left: 30px;
-        font-size: 12px;
-        letter-spacing: 1px;
-        font-weight: 200;
-        font-style: italic;
-        line-height: 67px;
-    }
-}
-
-.bottom-right {
-    background: @orange;
-    color: white;
-    height: @pageHeight / 3;
-    .section {
-        margin: 35px 0 0 30px;
-        .number {
-            font-size: 32px;
-            font-family: @serifFontFamily;
-            letter-spacing: 3px;
-        }
-        .slash {
-            font-family: @serifFontFamily;
-            font-size: 37px;
-            vertical-align: -1px;
-            margin-left: 1px;
-        }
-        .name {
-            font-size: 35px;
-            font-style: italic;
-            font-weight: 200;
-            letter-spacing: 3px;
-        }
-    }
-}
-
-.nav {
-    margin-top: @navMargin;
-    margin-left: @navMargin - 20px;
-
-    a:hover { text-decoration: none; }
-    .bibiana {
-        font-family: @serifFontFamily;
-        font-size: 24px;
-        line-height: 28px;
-        letter-spacing: 1px;
-        color: black;
-        text-decoration: none;
-    }
-
-    .job-title {
-        float: right;
-        margin-right: 44px;
-        font-size: 25px;
-        font-style: italic;
-        font-weight: 200;
-        color: @grey;
-        line-height: 25px;
-        margin-top: 1px;
-        letter-spacing: 2px
-    }
-
-    .menu {
-        position: absolute;
-        top: @menuPos;
-
-        ol {
-            list-style: none;
-            margin: 0;
-            ol {
-                margin-left: 28px;
-                margin-top: 11px;
-            }
-        }
-
-        li {
-            line-height: 11px;
-            margin-bottom: 11px;
-        }
-
-        a {
-            color: black;
-            text-decoration: none;
-            &:hover, &.selected {
-                border-bottom: 1px solid black;
-                padding-bottom: 2px;
-            }
-        }
-        .number {
-            font-family: @serifFontFamily;
-            font-size: 10px;
-            letter-spacing: 1px;
-        }
-        .slash {
-            font-family: @serifFontFamily;
-            font-size: 11px;
-        }
-        .name {
-            font-size: 11px;
-            font-style: italic;
-            letter-spacing: 1px;
-            color: @grey;
-        }
-        .project {
-            margin-bottom: 7px;
-            a:hover, a.selected {
-                color: @orange;
-                border: 0;
-                .name { color: @orange; }
-            }
-            .number {
-                font-family: @sansFontFamily;
-                font-style: italic;
-                font-size: 11px;
-            }
-        }
-    }
-
-
-    .email {
-        position: absolute;
-        top: @pageHeight - @navMargin - 11px;
-		a {
-	        text-decoration: none;
-	        color: @orange;
-	        font-style: italic;
-	        font-size: 11px;
-	        line-height: 11px;
-	        letter-spacing: 1px;
-	        &:hover { text-decoration: underline; }
-		}
-    }
-}
-
-.password {
-	background-color: @orange;
-	.bibiana { color: white; }
-	.job-title { color: white; }
-	.email a { color: white; }
-	form {
-		position: absolute;
-		top: 499px - @menuPos;
-		label {
-			color: white;
-			font-family: @sansFontFamily;
-			font-size: 12px;
-			font-style: italic;
-			letter-spacing: 1px;
-		}
-		input {
-			@padding: 5px;
-			border-radius: 0;
-			border: 0;
-			vertical-align: middle;
-			padding: @padding;
-			width: 210px - 2 * @padding;
-			height: 25px - 2 * @padding;
-		}
-	}
-}
-
 input:focus, select:focus, textarea:focus, a:focus {
 	outline: none;
 	outline-width: 0;
 	box-shadow: none;
-}
-
-.landing {
-	height: @pageHeight;
-}
-
-.x, .arrow {
-	height: @pageHeight / 3;
-}
-
-.project-description {
-	@topPadding: 30px;
-	height: @pageHeight / 3 - @topPadding;
-	background-color: @orange;
-	color: white;
-	padding-left: 25px;
-	padding-top: @topPadding;
-	letter-spacing: 1px;
-	.number {
-		.section {
-			font-family: @serifFontFamily;
-			font-size: 30px;
-		}
-		.slash {
-			font-family: @serifFontFamily;
-			font-size: 35px;
-			margin-left: 2px;
-		}
-		.project {
-			font-size: 35px;
-			font-weight: 200;
-			font-style: italic;
-		}
-	}
-	.project-name {
-		font-style: italic;
-		font-size: 12px;
-		margin-top: 25px;
-		margin-bottom: 10px;
-	}
-	.info {
-		font-size: 12px;
-		.line {
-			margin-bottom: 3px;
-			.key {
-				font-weight: bold;
-			}
-		}
-	}
-}
-
-.x {
-	background-image: url("/static/img/x.png");
-}
-
-.arrow {
-	background-image: url("/static/img/arrow.png");
-	background-color: #94948b;
-	opacity: .35;
-	&:hover {
-		opacity: .45;
-	}
 }
