--- a/static/less/bibiana.less
+++ b/static/less/bibiana.less
@@ -3,6 +3,7 @@
 @import "bibiana/nav.less";
 @import "bibiana/section.less";
 @import "bibiana/project.less";
+@import "bibiana/carousel.less";
 
 
 @orange: #F58426;
