--- a/templates/project.html
+++ b/templates/project.html
@@ -28,7 +28,6 @@
         </div>
     </div>   <!-- landing -->
 
-    <div class="span31">
     <div id="myCarousel" class="carousel slide">
         <div class="carousel-inner">
             <div class="item active"><img src="/static/img/01web/01inmobi/01-01.png"></div>
@@ -40,11 +39,11 @@
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
     </div>
-    </div>
 {% endblock %}
 
 {% block jsinclude %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/static/js/bootstrap-transition.js"></script>
     <script src="/static/js/bootstrap-carousel.js"></script>
     <script src="/static/js/project.js"></script>
 {% endblock %}
