--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -7,5 +7,17 @@
 	height: @pageHeight;
 	.item {
 		width: @imageWidth;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	// vertically align
+	table {
+		height: 100%;
+		width: 100%;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		td { vertical-align: middle; }
 	}
 }
