--- a/templates/project.html
+++ b/templates/project.html
@@ -29,12 +29,14 @@
     </div>   <!-- landing -->
 
     <div id="myCarousel" class="carousel slide">
+        <table><tr><td>
         <div class="carousel-inner">
             <div class="item active"><img src="/static/img/01web/01inmobi/01-01.png"></div>
             <div class="item"><img src="/static/img/01web/01inmobi/02-01.png"></div>
             <div class="item"><img src="/static/img/01web/01inmobi/03-01.png"></div>
             <div class="item"><img src="/static/img/01web/01inmobi/04-01.png"></div>
         </div>
+        </td></tr></table>
         <!-- Carousel nav -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
