--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -1,23 +1,11 @@
-@carouselWidth: 720px;
 @imageWidth: 620px;
 @peekWidth: 20px;
 
 .carousel {
 	background-color: #f6f6f6;
 	height: @pageHeight;
-	.item {
-		width: @imageWidth;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
-	// vertically align
-	table {
-		height: 100%;
-		width: 100%;
-		margin: 0;
-		padding: 0;
-		border: 0;
-		td { vertical-align: middle; }
-	}
+}
+
+.landing {
+	display: none;
 }
