--- a/templates/project.html
+++ b/templates/project.html
@@ -28,24 +28,20 @@
         </div>
     </div>   <!-- landing -->
 
-    <div id="myCarousel" class="carousel slide">
-        <table><tr><td>
-        <div class="carousel-inner">
-            <div class="item active"><img src="/static/img/01web/01inmobi/01-01.png"></div>
-            <div class="item"><img src="/static/img/01web/01inmobi/02-01.png"></div>
-            <div class="item"><img src="/static/img/01web/01inmobi/03-01.png"></div>
-            <div class="item"><img src="/static/img/01web/01inmobi/04-01.png"></div>
+    <div class="carousel">
+        <div id="carousel-inner">
+            <img src="/static/img/01web/01inmobi/01-01.png" />
+            <img src="/static/img/01web/01inmobi/02-01.png" />
+            <img src="/static/img/01web/01inmobi/03-01.png" />
+            <img src="/static/img/01web/01inmobi/04-01.png" />
         </div>
-        </td></tr></table>
-        <!-- Carousel nav -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+        <a href="#" id="prev" title="Show previous"> </a>
+        <a href="#" id="next" title="Show next"> </a>
     </div>
 {% endblock %}
 
 {% block jsinclude %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/static/js/bootstrap-transition.js"></script>
-    <script src="/static/js/bootstrap-carousel.js"></script>
+    <script src="/static/js/jquery.carouFredSel-5.5.5-packed.js"></script>
     <script src="/static/js/project.js"></script>
 {% endblock %}
