--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -4,8 +4,17 @@
 .carousel {
 	background-color: #f6f6f6;
 	height: @pageHeight;
+	overflow: hidden;
+	line-height: 1;
+	position: relative;
 }
 
-.landing {
-	display: none;
+.carousel-inner {
+	left: -571px;
+	width: 1000000px;
+	height: 495px;
+	img {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
 }
