--- a/templates/project.html
+++ b/templates/project.html
@@ -29,7 +29,7 @@
     </div>   <!-- landing -->
 
     <div class="carousel">
-        <div id="carousel-inner">
+        <div class="carousel-inner">
             <img src="/static/img/01web/01inmobi/01-01.png" />
             <img src="/static/img/01web/01inmobi/02-01.png" />
             <img src="/static/img/01web/01inmobi/03-01.png" />
@@ -42,6 +42,5 @@
 
 {% block jsinclude %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/static/js/jquery.carouFredSel-5.5.5-packed.js"></script>
     <script src="/static/js/project.js"></script>
 {% endblock %}
