--- a/templates/project.html
+++ b/templates/project.html
@@ -29,14 +29,14 @@
     </div>   <!-- landing -->
 
     <div class="carousel">
+        <table><tr><td>
         <div class="carousel-inner">
             <img src="/static/img/01web/01inmobi/01-01.png" />
             <img src="/static/img/01web/01inmobi/02-01.png" />
             <img src="/static/img/01web/01inmobi/03-01.png" />
             <img src="/static/img/01web/01inmobi/04-01.png" />
         </div>
-        <a href="#" id="prev" title="Show previous"> </a>
-        <a href="#" id="next" title="Show next"> </a>
+        </td></tr></table>
     </div>
 {% endblock %}
 
