--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -10,10 +10,12 @@
 .carousel-inner {
 	width: 1000000px;
 	position: relative;
+	left: 35px;
 	img {
-		margin-left: 15px;
-		margin-right: 15px;
+		margin-left: 14px;
+		margin-right: 14px;
 		width: @imageWidth;
+		.box-shadow(5px 5px 8px 0 #bcbec0);
 	}
 }
 
@@ -21,8 +23,10 @@
 table {
 	height: 100%;
 	width: 100%;
-	margin: 0;
-	padding: 0;
-	border: 0;
+	* {
+		margin: 0;
+		padding: 0;
+		border: 0;
+	}
 	td { vertical-align: middle; }
 }
