--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -10,12 +10,13 @@
 .carousel-inner {
 	width: 1000000px;
 	position: relative;
-	left: 35px;
+	font-size: 0;
 	img {
-		margin-left: 14px;
-		margin-right: 14px;
+		margin-left: 15px;
+		margin-right: 15px;
 		width: @imageWidth;
 		.box-shadow(5px 5px 8px 0 #bcbec0);
+		-webkit-background-clip: padding-box;
 	}
 }
 
