--- a/templates/project.html
+++ b/templates/project.html
@@ -30,11 +30,11 @@
 
     <div class="carousel">
         <table><tr><td>
-        <div class="carousel-inner">
-            <img src="/static/img/01web/01inmobi/01-01.png" />
-            <img src="/static/img/01web/01inmobi/02-01.png" />
-            <img src="/static/img/01web/01inmobi/03-01.png" />
-            <img src="/static/img/01web/01inmobi/04-01.png" />
+        <div class="carousel-inner" style="left: 35px;">
+            <img src="/static/img/01web/01inmobi/01-01.png" class="active">
+			<img src="/static/img/01web/01inmobi/02-01.png">
+            <img src="/static/img/01web/01inmobi/03-01.png">
+            <img src="/static/img/01web/01inmobi/04-01.png">
         </div>
         </td></tr></table>
     </div>
@@ -42,5 +42,5 @@
 
 {% block jsinclude %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="/static/js/project.js"></script>
+    <script src="/static/js/carousel.js"></script>
 {% endblock %}
