--- a/templates/project.html
+++ b/templates/project.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="x"></div>
-            <a href="" class="arrow">
+            <a href="javascript: void(0);" class="arrow">
                 <div class="arrow"></div>
             </a>
         </div>
