pretty good opacity on prev and next

--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -17,6 +17,10 @@
 		width: @imageWidth;
 		.box-shadow(5px 5px 8px 0 #bcbec0);
 		-webkit-background-clip: padding-box;
+		opacity: .5;
+	}
+	img.active {
+		opacity: 1;
 	}
 }
 
