cursor: hand on prev and next

--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -18,9 +18,11 @@
 		.box-shadow(5px 5px 8px 0 #bcbec0);
 		-webkit-background-clip: padding-box;
 		opacity: .5;
-	}
-	img.active {
-		opacity: 1;
+		&:hover { cursor: pointer; }
+		&.active {
+			opacity: 1;
+			&:hover { cursor: auto; }
+		}
 	}
 }
 
