--- a/static/less/bibiana/carousel.less
+++ b/static/less/bibiana/carousel.less
@@ -18,7 +18,10 @@
 		.box-shadow(5px 5px 8px 0 #bcbec0);
 		-webkit-background-clip: padding-box;
 		opacity: .5;
-		&:hover { cursor: pointer; }
+		&:hover {
+			cursor: pointer;
+			opacity: 1;
+		}
 		&.active {
 			opacity: 1;
 			&:hover { cursor: auto; }
