changed meta description

--- a/templates/bibiana.html
+++ b/templates/bibiana.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Bibiana Monterde :: Graphic Designer">
+		<meta name="description" content="Selected samples of Bibiana Monterde's design work. Request access by emailing bbmonterde@gmail.com">
 		<meta name="author" content="Bibiana Monterde">
 		<title>{{ '[DEBUG] ' if config.DEBUG }}
 			{% block title %}Bibiana Monterde :: Graphic Designer{% endblock %}
