Revert "make browser load langing image first"
This reverts commit f95cce44834535d6dcfc5521ea53b1f2922ca11c.

--- a/templates/project.html
+++ b/templates/project.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <div class="landing">
-        <div class="span24 landing-img" style="background-image:url('/static/img/{{ section }}/{{ project }}/00landing.png');">
+        <div class="span24 landing-img" style="background-image:url('/static/img/{{ section }}/{{ project }}/landing.png');">
         </div>
         <div class="span12">
             <div class="project-description">
